--- a/debian/midolman-agent-common.config
+++ b/debian/midolman-agent-common.config
@@ -9,6 +9,7 @@ db_input high midolman-agent-common/server-port || true
 db_input high midolman-agent-common/server-host || true
 db_input high midolman-agent-common/midolman-conf || true
 db_input low midolman-agent-common/openvswitch-bridge_prefix || true
+db_input low midolman-agent-common/openvswitch-controller || true
 db_input low midolman-agent-common/interface-mtu || true
 
 db_go
