Update sample config for quantum plugin
Signed-off-by: Tomoe Sugihara <tomoe@midokura.com>
Signed-off-by: Ryu Ishimoto <ryu@midokura.com>

--- a/src/midolman/quantum/midonet_plugin.ini
+++ b/src/midolman/quantum/midonet_plugin.ini
@@ -5,7 +5,7 @@ provider_router_name = MidonetProviderRouter
 tenant_router_name_format = MidonetTenantRouter-%s
 
 [keystone]
-keystone_tokens_endpoint = http://localhost:5000/v2.0/tokens
-admin_user = admin
+keystone_uri = http://localhost:5000/v2.0
+admin_user = mido_admin_user
 admin_password = passw0rd
-admin_tenant = admin
+provider_tenant_id = 00112233445566778899aabbccddeeff
